--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="action_menu">Menu</string>
     <string name="action_user">Usuario</string>
     <string name="action_search">Search</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confPassword">Confirm Password</string>
+    <string name="signUp">Sign Up</string>
+    <string name="login">Login</string>
+    <string name="profile">Profile</string>
 </resources>
