First commit Third day (21/1/19) --> I'm going to try with fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="signUp">Sign Up</string>
     <string name="login">Login</string>
     <string name="profile">Profile</string>
+    <string name="age">Age</string>
+    <string name="deliveryRating">Delivery Rating</string>
+    <string name="consumerRating">Consumer Rating</string>
+    <string name="realizarPedido">Realizar Pedido</string>
+    <string name="recibirPedido">Recibir Pedido</string>
+    <string name="orders">Orders</string>
 </resources>
