Second commit Third day (21/1/19) --> Fragments and more things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="realizarPedido">Realizar Pedido</string>
     <string name="recibirPedido">Recibir Pedido</string>
     <string name="orders">Orders</string>
+    <string name="address">Address</string>
+    <string name="acceptOrder">Accept Order</string>
 </resources>
