--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="productDescr">Product Description</string>
     <string name="putInformation">Please put some information</string>
     <string name="logInForOrder">Please log in to place an order</string>
+    <string name="edit">EDIT</string>
+    <string name="save">Save</string>
 </resources>
