--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="title">Title</string>
     <string name="user">User</string>
     <string name="productDescr">Product Description</string>
-    <string name="putInformation">Please put some information</string>
+    <string name="putInformation">You have forgotten something</string>
     <string name="logInForOrder">Please log in to place an order</string>
     <string name="edit">EDIT</string>
     <string name="save">Save</string>
