Enough for today, I have to fix the remove problem in recylcerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="acceptedOrders">To deliver</string>
     <string name="slogan">make an order or send it yourself</string>
     <string name="registerLogIn">REGISTER / LOG IN</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
 </resources>
